force-app/main/default/objects/cgcloud__Tour_Template_Tour_Check__c/cgcloud__Tour_Template_Tour_Check__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between tour template and tour check, used for defining the relevant tour checks on a tour.</description>
    <label>Tour Template Tour Check</label>
    <nameField>
        <displayFormat>TTTC-{0000}</displayFormat>
        <label>Tour Template Tour Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Template Tour Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>