force-app/main/default/objects/cgcloud__Tour_Template_Tour_Check__c/fields/cgcloud__Tour_Check__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour_Check__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tour Check</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Tour_Check__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Tour_Check__c</referenceTo>
    <relationshipLabel>Tour Template Tour Checks</relationshipLabel>
    <relationshipName>Tour_Template_Tour_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>