force-app/main/default/objects/cgcloud__Tour_Template_Tour_Check__c/fields/cgcloud__Tour_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour_Template__c</fullName>
    <label>Tour Template</label>
    <referenceTo>cgcloud__Tour_Template__c</referenceTo>
    <relationshipLabel>Tour Checks</relationshipLabel>
    <relationshipName>Tour_Template_Tour_Checks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>