force-app/main/default/objects/cgcloud__Tour_Template_Tour_Check__c/validationRules/cgcloud__Sort_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sort_Field_Validation</fullName>
    <active>true</active>
    <description>Enter a value that&apos;s greater than 0.</description>
    <errorConditionFormula>cgcloud__Sort__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>cgcloud__Sort__c</errorDisplayField>
    <errorMessage>Enter a value that&apos;s greater than 0.</errorMessage>
</ValidationRule>